<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.matomo.demo.DemoActivity">

    <Button
        android:id="@+id/trackMainScreenViewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_screen_vew_button_label" />

    <Button
        android:id="@+id/trackDispatchNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_dispatch_now" />

    <Button
        android:id="@+id/trackCustomVarsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_track_custom_vars" />

    <Button
        android:id="@+id/raiseExceptionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_divide_by_zero" />

    <Button
        android:id="@+id/addEcommerceItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_ecommerce_item" />

    <Button
        android:id="@+id/trackEcommerceCartUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_track_ecommerce_cart_update" />

    <Button
        android:id="@+id/completeEcommerceOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_track_ecommerce_order" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trackGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_track_goal" />

        <EditText
            android:id="@+id/goalTextEditView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="1"
            android:inputType="number"
            android:text="1"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ Revenue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</LinearLayout>
